log
Sun, Apr 20, 2025  1:04:11 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sun, Apr 20, 2025  1:05:01 PM: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:59:18: error: assignment to 'long int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
916565a
Sun, Apr 20, 2025  1:05:41 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
a1bb37c
Sun, Apr 20, 2025  1:06:48 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5fd3395
Sun, Apr 20, 2025  1:10:19 PM: 
 tests:  1|5
total_score: 10/70
abdffc5
Sun, Apr 20, 2025  1:11:22 PM: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|6
total_score: 0/70
11d42ed
Sun, Apr 20, 2025  1:11:46 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
667496a
Sun, Apr 20, 2025  1:12:15 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
7f061d5
Sun, Apr 20, 2025  1:13:35 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0306744
Sun, Apr 20, 2025  1:29:14 PM: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
b762a59
Sun, Apr 20, 2025  1:30:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
bf1e339
Sun, Apr 20, 2025  4:23:35 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
7c965bd
Sun, Apr 20, 2025  4:30:43 PM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8d61d9f
Sun, Apr 20, 2025  4:44:33 PM: 
 hashmap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
e1f4816
Sun, Apr 20, 2025  4:45:21 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
df24ce5
Sun, Apr 20, 2025  5:33:47 PM: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
115866b
